データの中身を追記

--- a/doc/要件定義.md
+++ b/doc/要件定義.md
@@ -62,6 +62,32 @@
 - 1日で何回挑戦したか
 
 
+# どんなデータを持つか
+## 掛け算に関して
+<!-- 掛け算画面、記録画面の両方で同じデータを使用 -->
+- 各コースに関して
+  - 各モードにおいて
+    - 達成したか(bool)
+    - 総チャレンジ回数(int)
+
+<!-- 記録画面のみで使用 -->
+- 1日に何回チャレンジしたか(int)
+
+##  円周率に関して
+<!-- 円周率画面向け -->
+- 練習モード
+  - 各桁数に関して
+    - 挑戦回数(int)
+    - 歴代の最高桁数(int)
+- 本番モード
+  - 挑戦回数(int)
+  - 歴代の最高記録(int)
+
+<!-- 記録画面向き -->
+- 1日の中での最高記録(int)
+- 1日に何回チャレンジしたか(int)
+
+
 
 
 
